# python-glazewm

./: .gitignore  Makefile  pyproject.toml
glazewm/: __init__.py  async_.py  main.py  objects.py  sync.py
